[package]
name = "roguelike-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = { version = "0.19", default-features = false, features = ["links"] }
env_logger = "0.9"
log = "0.4"
pixels = "0.10.0"
winit = "0.27"
winit_input_helper = "0.13"
glam = "0.22.0"
image = "0.24.4"
fontdue = "0.7.2"
bitflags = "1.3.2"
rand = "0.8.5"
